# SanctuarySovereignSystems

./: .editorconfig  .env  .env.example  .gitattributes  .gitignore  .output.txt  ARTIFACT_REGISTER.json  AUTONOMY_LIMITS.md  AWAY_KIT_README.md  Activate-All-Apps.ps1  Bootstrap-SovereignNode.ps1  CHANGELOG.md  CHANGELOG_OPS.md  CLAUDE.md  CLOSEOUT_PLAN.md  CODEOWNERS  COLUMN-2-VS-3-ANALYSIS.md  COMMAND_LIBRARY.md  CONSOLIDATION-COMPLETE.md  CONSOLIDATION_PLAN.md  CONSTITUTION.md  CONTRIBUTING.md  Create-DesktopShortcut.ps1  Create-Sovereign-Bundle.ps1  DAY1_CHECKLIST.md  DEMO.bat  DEMO.ps1  DEMO_README.md  Deploy-SovereignSandbox.ps1  Dockerfile  Dockerfile.generic  ENCRYPTION_SETUP.md  EVOLUTION.md  GOVERNANCE_MERGE_CHECKLIST_S3.md  Gemini3-Routing-Analysis.ipynb  Install-SovereignTools.ps1  JARUS_SURGE_ALIGNMENT_REPORT.md  LICENSE  Makefile  PDCA_CAMPAIGN_PLAN.md  (+75 more)
.github/: CODEOWNERS
CANON/: ARTICLE_8_PROCEDURAL_INDICTMENT.md  ARTICLE_8_PROCEDURAL_INDICTMENT.md.sha256.txt  HANDOVER-2026-02-06.md
CONFIG/: autobuild.json  external_anchor.json  system_state.json
Codex/: IMPLEMENTATION_SUMMARY.md.sha256.txt  README.md.sha256.txt
DATA/: README.md  _anchor_chain.json  _automation_log.json  poc_integrity_test.txt  sample.txt
Governance/: GOVERNANCE_BUNDLE_VERSION.md  OPS-INVARIANTS.md  bundle_manifest.json  config.py  governance_config.schema.json  governance_config.yaml  promotion_ledger.jsonl
agents/: multi_agent_local.py
assistive_lab/: __main__.py  governor.py  lab.py  lab_log.csv  logger.py  prompts.py  rubric.py  validator.py
audit/: .pipeline_version
blade-scanner/: README.md
blade-watcher/: Dockerfile  watcher.py
boardroom/: boardroom.py  boardroom_app.py  mock_backend.py  requirements.txt
boardroom-shell/: COMPLETION.md  Dockerfile  README.md  electron.js  package.json  preload.js  webpack.config.js
ci/: README.md
claims/: claims.yaml
compose/: docker-compose.federation.yml  docker-compose.mission.yml  stack.agents.yml  stack.control-plane.yml
configs/: README.md
core/: HARMONY_PROTOCOL.py  __init__.py
custody/: custody.jsonl
deploy/: DEPLOYMENT_PACKAGE.ps1  LAN_DEPLOYMENT_TOPOLOGY.md  SANDBOX_4HR_RUN.ps1  SANDBOX_KID_SAFE_2HR.ps1  deploy-lan.ps1  package-usb.ps1  prepare-offline.ps1
docs/: ARCHANGEL_COMMAND_PROMPT.md  ARCHITECTURE.md  AUTOMATION_CANON.md  BASELINE_EXPECTED_STATE.md  BOARDROOM_README.md  CHANGE_N8N_2_0_UPGRADE_PLAN.md  COLLABORATOR_ACCESS.md  CONNECTION_MANIFEST.md  (+27 more)
(+1169 files in other folders)
