[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctuary-sovereign-systems"
version = "1.0.0"
description = "Constitutional governance framework for AI — enforcement through structural impossibility"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Sanctuary Sovereign Systems"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Repository = "https://github.com/Andy160675/SanctuarySovereignSystems"

[tool.setuptools.packages.find]
include = ["kernel*", "engine*", "governance*", "ops*"]
